--- a/src/app/menu/header/header.component.css
+++ b/src/app/menu/header/header.component.css
@@ -46,3 +46,29 @@ mat-icon{
 .mat-menu-panel {
   width: 600px;
 }
+
+.btn_username {
+  padding: 0 2rem;
+  border-radius: 50px;
+  background-color: #f1f1f1;
+}
+
+.img_avt {
+  /* border: 2px solid pink; */
+  font-weight: bolder;
+  z-index: 1;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  background-color: rgb(102, 160, 247);
+}
+.img_avt > h1 {
+  text-align: center;
+  font-size: 1.5rem;
+  padding: 3px;
+}
+
+.logo_detail {
+  font-weight: bolder;
+  font-size: 30px;
+}
