--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -28,7 +28,7 @@
             </tr>
             <tr>
                 <td>Đơn đã đặt: </td>
-                <td>{{ArrayOrderTotal[0].arrOrders.length}}</td>
+                <td>{{ArrayOrderTotal.length}}</td>
             </tr>
             <tr>
                 <td>Đơn đã hủy: </td>
