--- a/src/app/menu/header/header.component.html
+++ b/src/app/menu/header/header.component.html
@@ -78,9 +78,8 @@
   </ul>
 </mat-toolbar>
 
-<div class="example-sidenav-content">
+<div class="example-sidenav-content" style="padding-top: 2rem;">
   <router-outlet></router-outlet>
 </div>
-
 
 </mat-sidenav-container>
