--- a/src/app/menu/header/header.component.css
+++ b/src/app/menu/header/header.component.css
@@ -14,6 +14,8 @@ mat-icon{
 }
 
 .example-toolbar{
+  position: fixed;
+  z-index: 1;
   box-shadow:  5px 5px 5px #f1f1f1;
   border-bottom: 0.5px solid #f1f1f1;
   background-color: white;
@@ -24,6 +26,10 @@ mat-icon{
   height: 100vh;
 }
 .example-sidenav-content {
+  position: relative;
+  height: 100%;
+  top: 3;
+  top: 5rem;
   padding-top: 2rem;
   width: 80%;
   margin: 0 auto;
@@ -72,3 +78,4 @@ mat-icon{
   font-weight: bolder;
   font-size: 30px;
 }
+
