--- a/src/app/tickets/ticket-detail/ticket-detail.component.css
+++ b/src/app/tickets/ticket-detail/ticket-detail.component.css
@@ -1,6 +1,10 @@
 .icon_condition {
-  padding: 1rem;
+  padding: 0.5rem 2rem;
+  border-radius: 5rem;
+  background-color: rgb(255, 240, 246);
+  margin: 0.5rem;
 }
+
 .content_ticket{
   word-wrap: break-word;
 }
@@ -27,4 +31,13 @@
 input[type="number"] {
   width: 50px;
   height: 30px;
+}
+
+.button_select:focus {
+  color: purple;
+  background-color: rgba(248, 218, 248, 0.849);
+}
+
+.mat-card {
+  margin: 1rem;
 }
