--- a/src/app/menu/header/header.component.html
+++ b/src/app/menu/header/header.component.html
@@ -63,7 +63,7 @@
       <mat-menu #menu = "matMenu">
         <button mat-menu-item routerLink="/order" > Đơn hàng </button>
         <button mat-menu-item routerLink = "setting" > Cài đặt tài khoản </button>
-        <button mat-menu-item routerLinkActive="mat-accent" (click) = 'onLogout()'>Đăng xuất</button>
+        <button mat-menu-item routerLinkActive="mat-primary" (click) = 'onLogout()'>Đăng xuất</button>
       </mat-menu>
 	  </li>
 
@@ -71,7 +71,7 @@
       <button
       mat-button
       routerLink = "/login"
-      routerLinkActive="mat-accent">
+      routerLinkActive = "mat-primary">
       <span>Login</span>
       </button>
 	  </li>
