--- a/src/app/pages/pay/pay.component.html
+++ b/src/app/pages/pay/pay.component.html
@@ -81,22 +81,22 @@
             placeholder="Nhập số điện thoại"
             formControlName="phone_number">
         </mat-form-field>
-        <button 
-            mat-stroked-button 
-            color="primary" 
-            type="submit" 
+        <button
+            mat-stroked-button
+            color="primary"
+            type="submit"
             [disabled]="!busy"
             (click)="onVerify()">
             <span *ngIf="busy">Gửi</span>
             <span *ngIf="!busy">Chờ trong vài giây</span>
         </button>
-        <button 
-          mat-stroked-button 
+        <button
+          mat-stroked-button
           color="primary" >Hủy
         </button>
       </section>
       <div id="recaptcha-container"></div>
-      
+
       <mat-form-field appearance="outline">
         <mat-label>Email:</mat-label>
         <input
@@ -133,13 +133,8 @@
       </mat-radio-button>
     </mat-radio-group>
     <button mat-raised-button (click) = "payComplete()">THANH TOÁN NGAY</button>
-    <ngx-qrcode 
-      #qrcode
-      [elementType]="elementType"
-      [errorCorrectionLevel]="errorCorrectionLevel"
-      [(value)]="testQR"></ngx-qrcode>
-    
-      <img #canvas>
+    <img #canvas>
+    <qrcode #qrcode [qrdata]="qrcodeContent" [width]="256" [errorCorrectionLevel]="'M'" [elementType]="'img'"></qrcode>
 
   </mat-step>
 </mat-vertical-stepper>
