--- a/src/app/pages/pay/pay.component.html
+++ b/src/app/pages/pay/pay.component.html
@@ -133,8 +133,8 @@
       </mat-radio-button>
     </mat-radio-group>
     <button mat-raised-button (click) = "payComplete()">THANH TOÁN NGAY</button>
-    <img #canvas>
-    <qrcode #qrcode [qrdata]="qrcodeContent" [width]="256" [errorCorrectionLevel]="'M'" [elementType]="'img'"></qrcode>
+    <!-- <img #canvas>
+    <qrcode #qrcode [qrdata]="qrcodeContent" [width]="256" [errorCorrectionLevel]="'M'" [elementType]="'img'"></qrcode> -->
 
   </mat-step>
 </mat-vertical-stepper>
